p-ws 1.2.3 (fixed links breaking layout on mobile)

--- a/portfolio/src/app.css
+++ b/portfolio/src/app.css
@@ -6,6 +6,10 @@ a, button {
     text-decoration: none !important;
 }
 
+a {
+    word-break: break-word;
+}
+
 .link {
     display: inline-block;
     position: relative;
